[package]
name = "pt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.4", optional = true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_repr = "*"
thiserror = "*"
url = "*"
log = "*"

[dev-dependencies]
simple_logger = "*"

[[bin]]
name = "pt"
required-features = ['clap']
