[package]
name = "poptg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
token = ["rand"]
file = []
bin = ["pretty_env_logger", "clap", "token", "regex", "colored", "tokio/fs", "anyhow", "home", "file"]

[dependencies]
clap = { version = "3.0.0-beta.4", optional = true }
rand = { version = "*", optional = true }
home = { version = "*", optional = true }
regex = { version = "*", optional = true }
colored = { version = "*", optional = true }
anyhow = { version = "*", optional = true }
pretty_env_logger = { version = "*", optional = true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "*", features = ["macros"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_repr = "*"
thiserror = "*"
url = "*"
log = "*"

[dev-dependencies]
pretty_env_logger = "*"

[[bin]]
name = "poptg"
required-features = ['bin']
